updated documentation for checkbox 1 example

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -113,23 +113,24 @@
             <tr>
               <th scope="row"><code>group</code></th>
               <td></td>
-              <td><code>ul</code></td>
+              <td><code>div</code></td>
               <td>
                 <ul>
-                  <li>Identifies the <code>ul</code> element as a <code>group</code> container for the checkboxes.</li>
+                  <li>Identifies the <code>div</code> element as a <code>group</code> container for the checkboxes.</li>
                 </ul>
               </td>
             </tr>
             <tr>
               <th scope="row"</th>
               <td><code>aria-labelledby</code></td>
-              <td><code>ul</code></td>
+              <td><code>div</code></td>
               <td>
                 <ul>
                   <li>The <code>aria-labelledby</code> attribute references the <code>id</code> attribute of the <code>h3</code> element to define the accessible name for the group of checkboxes.</li>
                 </ul>
               </td>
-            </tr>            <tr>
+            </tr>
+            <tr>
               <th scope="row"><code>checkbox</code></th>
               <td></td>
               <td><code>div</code></td>
