fixed recommand mode

--- a/examples/treeview/treeview-3/treeview-3a.html
+++ b/examples/treeview/treeview-3/treeview-3a.html
@@ -250,7 +250,7 @@
             </li>
           </ul>
 
-          <p><label>Files Selected: <input id="last_action" type="text" size=" " readonly></label></p>
+          <p><label>Files Selected: <textarea rows="20" cols="13" id="last_action" readonly> </textarea></label></p>
         </div>
       </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
