--- a/examples/treeview/treeview-3/treeview-3a.html
+++ b/examples/treeview/treeview-3/treeview-3a.html
@@ -249,8 +249,10 @@
               </ul>
             </li>
           </ul>
-
-          <p><label>Files Selected: <textarea rows="20" cols="13" id="last_action" readonly> </textarea></label></p>
+          <div>
+            <p><label><span id="numbers">  </span>Files Selected:</label></p>
+            <textarea rows="20" cols="13" id="last_action" readonly> </textarea>
+          </div>
         </div>
       </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep start" aria-label="End of"></div>
