3-b aria-selected change

--- a/examples/treeview/treeview-3/treeview-3b.html
+++ b/examples/treeview/treeview-3/treeview-3b.html
@@ -12,7 +12,7 @@
     <script src="../../js/app.js"></script>
 
     <link href="css/tree.css" rel="stylesheet">
-    <script type="text/javascript" src="js/tree.js"></script>
+    <script type="text/javascript" src="js/tree-3b.js"></script>
     <script type="text/javascript" src="js/treeitem.js"></script>
     <script type="text/javascript" src="js/treeitemClick.js"></script>
   </head>
@@ -542,8 +542,8 @@
                 <ul>
                   <li>Identifies the <code>ul</code> element as a <code>tree</code> widget.</li>
                   <li>
-                    Because focus movement in the tree is managed with a 
-                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>, 
+                    Because focus movement in the tree is managed with a
+                    <a href="../../../#kbd_roving_tabindex">roving tabindex</a>,
                     the <code>tree</code> container does not need a <code>tabindex</code> attribute.
                   </li>
                 </ul>
