updated the link menu to use proper parent child relationships for menus and sub menus

--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -50,108 +50,107 @@
     <div id="ex1">
       <nav aria-label="Mythical University">
         <ul id="menubar1" role="menubar" aria-label="Mythical University">
-          <li>
-            <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
+          <li role="menuitem" aria-haspopup="true" aria-expanded="false">
+            <a  href="#">About</a>
             <ul role="menu" aria-label="About">
-              <li role="none">
-                <a role="menuitem" href="mb-about.html#overview">Overview</a>
+              <li role="menuitem">
+                <a href="mb-about.html#overview">Overview</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-about.html#admin">Administration</a>
+              <li role="menuitem">
+                <a href="mb-about.html#admin">Administration</a>
               </li>
-              <li role="none">
-                <a id="menubar113" role="menuitem" href="#" aria-haspopup="true" aria-expanded="false">Facts</a>
-                <ul role="menu" aria-label="Facts">
-                  <li role="none">
-                    <a role="menuitem" href="mb-about.html#facts">History</a>
-                  </li>
-                  <li role="none">
-                    <a role="menuitem" href="mb-about.html#facts">Current Statistics</a>
-                  </li>
-                  <li role="none">
-                    <a role="menuitem" href="mb-about.html#facts">Awards</a>
-                  </li>
-                </ul>
+              <li role="menuitem" tabindex="-1" aria-haspopup="true" aria-expanded="false">
+                  <a href="#">Facts</a>
+                  <ul role="menu" aria-label="Facts">
+                    <li role="menuitem">
+                      <a href="mb-about.html#facts">History</a>
+                    </li>
+                    <li role="menuitem">
+                      <a href="mb-about.html#facts">Current Statistics</a>
+                    </li>
+                    <li role="menuitem" >
+                      <a href="mb-about.html#facts">Awards</a>
+                    </li>
+                  </ul>
               </li>
-              <li>
-                <a role="menuitem" href="#" aria-haspopup="true" aria-expanded="false">Campus
-                  Tours</a>
-                <ul role="menu" aria-label="Campus Tours">
-                  <li role="none">
-                    <a role="menuitem" href="mb-about.html#tours">For prospective students</a>
-                  </li>
-                  <li role="none">
-                    <a role="menuitem" href="mb-about.html#tours">For alumni</a>
-                  </li>
-                  <li role="none">
-                    <a role="menuitem" href="mb-about.html#tours">For visitors</a>
-                  </li>
-                </ul>
+              <li role="menuitem" tabindex="-1" aria-haspopup="true" aria-expanded="false">
+                  <a href="#">Campus Tours</a>
+                  <ul role="menu" aria-label="Campus Tours">
+                    <li role="menuitem">
+                      <a href="mb-about.html#tours">For prospective students</a>
+                    </li>
+                    <li role="menuitem">
+                      <a href="mb-about.html#tours">For alumni</a>
+                    </li>
+                    <li role="menuitem">
+                      <a href="mb-about.html#tours">For visitors</a>
+                    </li>
+                  </ul>
               </li>
             </ul>
           </li>
-          <li>
-            <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
+          <li role="menuitem" aria-haspopup="true" aria-expanded="false">
+            <a  href="#">Admissions</a>
             <ul role="menu" aria-label="Admissions">
-              <li role="none">
-                <a role="menuitem" href="mb-admissions.html#apply">Apply</a>
+              <li role="menuitem">
+                <a  href="mb-admissions.html#apply">Apply</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="#" aria-haspopup="true" aria-expanded="false">Tuition</a>
-                <ul role="menu" aria-label="Tuition Information">
-                  <li role="none">
-                    <a role="menuitem" href="mb-admissions.html#tuition">Undergraduate</a>
-                  </li>
-                  <li role="none">
-                    <a role="menuitem" href="mb-admissions.html#tuition">Graduate</a>
-                  </li>
-                  <li role="none">
-                    <a role="menuitem" href="mb-admissions.html#tuition">Professional Schools</a>
-                  </li>
-                </ul>
+              <li role="menuitem" aria-haspopup="true" aria-expanded="false">
+                  <a href="#">Tuition</a>
+                  <ul role="menu" aria-label="Tuition Information">
+                    <li role="menuitem">
+                      <a href="mb-admissions.html#tuition">Undergraduate</a>
+                    </li>
+                    <li role="menuitem">
+                      <a href="mb-admissions.html#tuition">Graduate</a>
+                    </li>
+                    <li role="menuitem">
+                      <a href="mb-admissions.html#tuition">Professional Schools</a>
+                    </li>
+                  </ul>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-admissions.html#signup">Sign Up</a>
+              <li role="menuitem" >
+                <a href="mb-admissions.html#signup">Sign Up</a>
               </li>
               <li role="separator"></li>
-              <li role="none">
-                <a role="menuitem" href="mb-admissions.html#visit">Visit</a>
+              <li role="menuitem" >
+                <a href="mb-admissions.html#visit">Visit</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-admissions.html#photo">Photo Tour</a>
+              <li role="menuitem">
+                <a href="mb-admissions.html#photo">Photo Tour</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-admissions.html#connect">Connect</a>
+              <li role="menuitem">
+                <a href="mb-admissions.html#connect">Connect</a>
               </li>
             </ul>
           </li>
-          <li>
-            <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
+          <li role="menuitem" aria-haspopup="true" aria-expanded="false">
+            <a href="#">Academics</a>
             <ul role="menu" aria-label="Academics">
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#colleges">Colleges &amp; Schools</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#colleges">Colleges &amp; Schools</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#programs">Programs of Study</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#programs">Programs of Study</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#honors">Honors Programs</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#honors">Honors Programs</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#online">Online Courses</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#online">Online Courses</a>
               </li>
               <li role="separator"></li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#explorer">Course Explorer</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#explorer">Course Explorer</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#register">Register for Class</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#register">Register for Class</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#academic">Academic Calendar</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#academic">Academic Calendar</a>
               </li>
-              <li role="none">
-                <a role="menuitem" href="mb-academics.html#tanscripts">Transscripts</a>
+              <li role="menuitem">
+                <a href="mb-academics.html#tanscripts">Transscripts</a>
               </li>
             </ul>
           </li>
@@ -417,12 +416,12 @@
           </th>
           <td></td>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>
             <ul>
               <li>Identifies the element as a menu item.</li>
-              <li> The accessible name is calculated from the text content of the <code>a</code> element.</li>
+              <li> The accessible name is calculated from the text content of the <code>li</code> element.</li>
             </ul>
           </td>
         </tr>
@@ -432,10 +431,10 @@
             <code>tabindex=&quot;-1&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>
-            Makes the <code>a</code> element keyboard focusable, but <strong>not</strong> part of the tab sequence.
+            Makes the <code>li</code> element keyboard focusable, but <strong>not</strong> part of the tab sequence.
           </td>
         </tr>
         <tr>
@@ -444,7 +443,7 @@
             <code>tabindex=&quot;0&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>
             <ul>
@@ -461,7 +460,7 @@
             <code>aria-haspopup=&quot;true&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>Indicates the menuitem has a submenu.</td>
         </tr>
@@ -471,7 +470,7 @@
             <code>aria-expanded=&quot;true&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>Indicates the submenu is open.</td>
         </tr>
@@ -481,23 +480,20 @@
             <code>aria-expanded=&quot;false&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>Indicates the submenu is closed.</td>
         </tr>
         <tr>
-          <th>
-            <code>none</code>
-          </th>
           <td></td>
+          <th>
+            <code>tabindex=&quot;-1&quot;</code>
+          </th>
           <td>
-            <code>li</code>
+            <code>a</code>
           </td>
           <td>
-            <ul>
-              <li>Removes the implied <code>listitem</code> role of the <code>li</code> element.</li>
-              <li>Necessary because the parent <code>ul</code> is serving as a <code>menu</code> so the <code>li</code> elements are not in their required list context.</li>
-            </ul>
+            Rmeoves the <code>a</code> element from the tab sequence.
           </td>
         </tr>
       </tbody>
@@ -548,12 +544,12 @@
           </th>
           <td></td>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>
             <ul>
               <li>Identifies the element as a menu item.</li>
-              <li>The accessible name is calculated from the text content of the <code>a</code> element.</li>
+              <li> The accessible name is calculated from the text content of the <code>li</code> element.</li>
             </ul>
           </td>
         </tr>
@@ -563,9 +559,28 @@
             <code>tabindex=&quot;-1&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
-          <td>Keeps the <code>a</code> element focusable but removes it from the <kbd>Tab</kbd> sequence.</td>
+          <td>
+            Makes the <code>li</code> element keyboard focusable, but <strong>not</strong> part of the tab sequence.
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <th>
+            <code>tabindex=&quot;0&quot;</code>
+          </th>
+          <td>
+            <code>li</code>
+          </td>
+          <td>
+            <ul>
+              <li>Includes the element in the <kbd>Tab</kbd> sequence.</li>
+              <li>Only one menubar item has <code>tabindex=&quot;0&quot;</code>.</li>
+              <li>On page load, the first menubar item has <code>tabindex=&quot;0&quot;</code>.</li>
+              <li>Focus is managed using <a href="../../../#kbd_roving_tabindex">roving tabindex</a>.</li>
+            </ul>
+          </td>
         </tr>
         <tr>
           <td></td>
@@ -573,9 +588,9 @@
             <code>aria-haspopup=&quot;true&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
-          <td>Indicates the menu item has a submenu.</td>
+          <td>Indicates the menuitem has a submenu.</td>
         </tr>
         <tr>
           <td></td>
@@ -583,7 +598,7 @@
             <code>aria-expanded=&quot;true&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>Indicates the submenu is open.</td>
         </tr>
@@ -593,26 +608,23 @@
             <code>aria-expanded=&quot;false&quot;</code>
           </th>
           <td>
-            <code>a</code>
+            <code>li</code>
           </td>
           <td>Indicates the submenu is closed.</td>
         </tr>
         <tr>
-          <th>
-            <code>none</code>
-          </th>
           <td></td>
+          <th>
+            <code>tabindex=&quot;-1&quot;</code>
+          </th>
           <td>
-            <code>li</code>
+            <code>a</code>
           </td>
           <td>
-            <ul>
-              <li>Removes the implied <code>listitem</code> role of the <code>li</code> element.</li>
-              <li>Necessary because the parent <code>ul</code> is serving as a <code>menu</code> so the <code>li</code> elements are not in their required list context.</li>
-            </ul>
+            Rmeoves the <code>a</code> element from the tab sequence.
           </td>
         </tr>
-      </tbody>
+     </tbody>
     </table>
   </section>
 
