--- a/examples/menubar/menubar-1/mb-about.html
+++ b/examples/menubar/menubar-1/mb-about.html
@@ -3,7 +3,11 @@
 <head>
     <title>Menubar Example Landing Page: About</title>
     <link href="../../css/core.css" rel="stylesheet">
-
+    <style>
+    h3 {
+        margin-left: 1em;
+    }
+    </style>
 </head>
 
 <body>
@@ -11,20 +15,39 @@
     <h1>Menubar Example Landing Page</h1>
     </header>
     <main>
-        <h1 id="about">About</h1>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h1 id ="about">About</h1>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="overview">Overview</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h2 id ="overview">Overview</h2>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="admin">Administration</a></li>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h2 id ="admin">Administration</h2>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="facts">Facts</a></li>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h2 id ="facts">Facts</h2>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="tours">Campus Tours</a></li>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h3 id ="facts-history">History</h3>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h3 id ="facts-stats">Current Stats</h3>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h3 id ="facts-awards">Awards</h3>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h2 id ="tours">Campus Tours</h2>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h3 id ="tours-student">Prospective Students</h3>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h3 id ="tours-alimni">Alumni</h3>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h3 id ="tours-visitor">Vistors</h3>
+        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
 
     </main>
 </body>
