--- a/examples/menubar/menubar-1/mb-academics.html
+++ b/examples/menubar/menubar-1/mb-academics.html
@@ -13,40 +13,40 @@
 
     <main>
         <h1 id="academics">Academics</h1>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
         <h2 id="colleges">Colleges &amp; Schools</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="programs">Programs of Study</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="honors">Honors Programs</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="online">Online Courses</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="explorer">Course Explorer</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="register">Register for Class</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="academic">Academic Calendar</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
 
         <h2 id="tanscripts">Transscripts</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
     </main>
 </body>
 
-</html> 
+</html>
