--- a/examples/menubar/menubar-1/mb-admissions.html
+++ b/examples/menubar/menubar-1/mb-admissions.html
@@ -3,7 +3,11 @@
 <head>
     <title>Menubar Example Landing Page: Admissions</title>
     <link href="../../css/core.css" rel="stylesheet">
-
+    <style>
+    h3 {
+        margin-left: 1em;
+    }
+    </style>
 </head>
 
 <body>
@@ -12,28 +16,37 @@
     </header>
     <main>
         <h1 id="admissions">Admissions</h1>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
         <h2 id="apply">Apply</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
         <h2 id="tuition">Tuition</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="signup">Sign Up</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h3 id="tuition-undergrad">Undergraduate</h3>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="visit">Visit</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h3 id ="tuition-graduate">Graduate</h3>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="photo">Photo Tour</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <h3 id ="tuition-professional">Professional Schools</h3>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
-        <h2 id="connect">Connect</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
- 
+        <h2 id ="signup">Sign Up</h2>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h2 id ="visit">Visit</h2>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h2 id ="photo">Photo Tour</h2>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
+        <h2 id ="connect">Connect</h2>
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+
 
     </main>
 </body>
 
-</html> 
+</html>
