--- a/examples/menubar/menubar-1/mb-arts.html
+++ b/examples/menubar/menubar-1/mb-arts.html
@@ -13,30 +13,30 @@
 
     <main>
         <h1 id="arts">Arts and Culture</h1>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
 
         <h2 id="fas">College of Fine and Applied Arts</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
         <h2 id="las">College of Liberal Arts and Sciences</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
         <h2 id="cultural-center">Cultural Center</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
         <h2 id="perfoming-arts">Performing Arts</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
-        <h2 id="art-museum">Art Museum</a></li>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <h2 id="art-museum">Art Museum</li>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
         <h2 id="history-museum">History Museum</h2>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
-        <h2 id="union">Student Union</a></li>
-        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
+        <h2 id="union">Student Union</li>
+        <p href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</p>
 
     </main>
 </body>
 
-</html> 
+</html>
