--- a/examples/menubar/menubar-1/mb-about.html
+++ b/examples/menubar/menubar-1/mb-about.html
@@ -16,37 +16,37 @@
     </header>
     <main>
         <h1 id ="about">About</h1>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h2 id ="overview">Overview</h2>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h2 id ="admin">Administration</h2>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h2 id ="facts">Facts</h2>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h3 id ="facts-history">History</h3>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h3 id ="facts-stats">Current Stats</h3>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h3 id ="facts-awards">Awards</h3>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h2 id ="tours">Campus Tours</h2>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h3 id ="tours-student">Prospective Students</h3>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h3 id ="tours-alimni">Alumni</h3>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
         <h3 id ="tours-visitor">Vistors</h3>
-        <p  href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example
+        <p><a href="menubar-1.html#code-ex-1">Back to <code>menubar</code> example</a></p>
 
 
     </main>
