--- a/examples/treeview/treeview-3/treeview-3b.html
+++ b/examples/treeview/treeview-3/treeview-3b.html
@@ -415,8 +415,8 @@
         </ul>
       </div>
         <div id="tree_box">
-            <p><label><span id="numbers">  </span></label></p>
-            <textarea rows="20" cols="16" id="last_action" readonly> </textarea>
+            <p><label id="id_selected_file_count" for="id_selected_file_information"></label></p>
+            <textarea rows="20" cols="16" id="id_selected_file_information" readonly> </textarea>
           </div>
         </div>
         </div>
