--- a/examples/treegrid/treegrid-1.html
+++ b/examples/treegrid/treegrid-1.html
@@ -78,7 +78,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <a href="../../#treegrid">treegrid design pattern (TBD)</a>
     can be used to make an interactive tree that enables users to navigate the hierarchical structure of email conversations
     and also provides the ability to navigate to elements that describe each email, such as subject, summary and sender.
-    This example uses the roving tabindex technqiue to manage the tabbing into and our of the treegrid and tabindex values are managed through javascript.
+
   </p>
 
   <section>
@@ -151,6 +151,17 @@ document.addEventListener('DOMContentLoaded', function () {
 
     <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
 
+  </section>
+
+  <section>
+    <h2>Accessibility Features</h2>
+
+    <ul>
+      <li>This example uses the roving tabindex technqiue to manage the tabbing into and our of the treegrid and tabindex values are managed through javascript.</li>
+      <li>If a <code>gridcell</code> contains a focusable element (e.g. <code>a</code>, <code>input</code>), the focusable element gets focus instead of the <code>gridcell</code>.  In this example the e-mail addresses are links, so the link receives focus when the user navigates to the <code>gridcell</code>.</li>
+      <li>The e-mail adddress link in the current message row with focus is included in the tabbing order (e.g. <code>tabIndex=<q>0</q></code>) of the page, all other links in the <code>treegrid</code> are not in the tabbing order of the page (e.g. <code>tabIndex=<q>-1</q></code>).</li>
+      <li>
+    </ul>
   </section>
 
   <section>
