--- a/examples/treeview/multi-select-1/multi-select-1b.html
+++ b/examples/treeview/multi-select-1/multi-select-1b.html
@@ -12,9 +12,10 @@
     <script src="../../js/app.js"></script>
 
     <link href="css/tree.css" rel="stylesheet">
-    <script type="text/javascript" src="js/tree-3b.js"></script>
-    <script type="text/javascript" src="js/treeitem.js"></script>
-    <script type="text/javascript" src="js/treeitemClick.js"></script>
+
+    <script type="text/javascript" src="js/multi-select-tree-b.js"></script>
+    <script type="text/javascript" src="js/multi-select-treeitem.js"></script>
+
   </head>
   <body>
     <nav aria-label="Related Links" class="feedback">
