file directory updated

--- a/examples/treeview/multi-select-1/multi-select-1b.html
+++ b/examples/treeview/multi-select-1/multi-select-1b.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>File Directory Treeview Example Using Declared Properties | WAI-ARIA Authoring Practices 1.1</title>
+    <title>File Directory Multi-Select Treeview Example Using Declared Properties | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -27,7 +27,7 @@
       </ul>
     </nav>
     <main>
-      <h1>File Directory Treeview Example Using Declared Properties</h1>
+      <h1>File Directory Multi-Select Treeview Example Using Declared Properties</h1>
       <p>
         The below example implements the
         <a href="../../../#TreeView">Treeview Design Pattern</a>
@@ -43,6 +43,7 @@
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
+        <li><a href="../multi-select-1/multi-select-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
       </ul>
       <section>
         <h2 id="start">Example</h2>
