made a few edits

--- a/examples/treeview/multi-select-1/multi-select-1b.html
+++ b/examples/treeview/multi-select-1/multi-select-1b.html
@@ -41,9 +41,10 @@
       <p>Similar examples include: </p>
       <ul>
         <li><a href="../treeview-1/treeview-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
+        <li><a href="../treeview-1/treeview-1b.html">File Directory Treeview using <em>declared</em> properties</a></li>
+        <li><a href="../multi-select-1/multi-select-1a.html">File Directory Multi-Select Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2a.html">Navigation Treeview using <em>computed</em> properties</a></li>
         <li><a href="../treeview-2/treeview-2b.html">Navigation Treeview using <em>declared</em> properties</a></li>
-        <li><a href="../multi-select-1/multi-select-1a.html">File Directory Treeview using <em>computed</em> properties</a></li>
       </ul>
       <section>
         <h2 id="start">Example</h2>
